Fixing spacing in Function app tabs (#1634)

--- a/AzureFunctions.AngularClient/src/app/site/site-dashboard/site-dashboard.component.scss
+++ b/AzureFunctions.AngularClient/src/app/site/site-dashboard/site-dashboard.component.scss
@@ -28,8 +28,6 @@
   
   -webkit-flex-flow: row nowrap;
   flex-flow: row nowrap;
-  
-  justify-content: space-evenly;
 }
 
 .site-tab-label{
